# foxhole-hexes

./: .gitignore  LICENSE  README.md  hex2tile.py  hexes.json  pyproject.toml  requirements.txt  tga2png.py
.github/workflows/: publish.yml
src/foxhole_hexes/: __init__.py  tga2png.py
tests/: test_hex.py
