[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foxhole-hexes"
version = "1.0.0"
description = "Tool to stitch Foxhole hex maps and generate map tiles."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Gudjon Magnusson", email = "gudjon@notbadjon.com"}
]
dependencies = [
  "click",
  "pillow"
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
hex2tile = "foxhole_hexes.hex2tile:main"
tga2png = "foxhole_hexes.tga2png:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
